# superbus

./: .gitignore  LICENSE  README.md  docker-compose.yml  setup.cfg
examples/bad_worker/: bad_worker.py  client.py  worker.py
examples/dummy/: client.py  worker.py
examples/large_files/: client.py  worker.py
examples/pipeline/: calc_worker.py  client.py  format_worker.py
examples/webhook/: client.py  webhook.py  worker.py
src/superbus/: __init__.py  client.py  updater.py  utils.py  worker.py
src/superbus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
