[metadata]
name = superbus
version = 0.0.5
author = starrabb1t
author_email = berzin@phystech.edu
description = redis-based bus to communicate between microservices that handle long-running tasks
long_description = file: README.md
long_description_content_type = text/markdown
url=https://github.com/starrabb1t/superbus
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    redis==3.5.3
    httpx==0.24.1
    pydantic==1.9.1

[options.packages.find]
where = src
